--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3400,7 +3400,7 @@ fieldset[disabled] .btn-danger.focus {
 }
 .btn-link {
   font-weight: normal;
-  color: #337ab7;
+  color: 	#FF8C00;
   border-radius: 0;
 }
 .btn-link,
